home/Deployments/parry/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parry-app
  namespace: parry-system
spec:
  serviceName: parry-app-svc
  replicas: 1
  selector:
    matchLabels:
      app: parry-app
  template:
    metadata:
      labels:
        app: parry-app
    spec:
      containers:
        - name: nginx-static-ha
          image: steffenblake/nginx-static-ha:1.0.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: parry-mount
              mountPath: /static
              readOnly: true
            - name: parry-timezone-host
              mountPath: /etc/timezone
              readOnly: true
            - name: parry-localtime-host
              mountPath: /etc/localtime
              readOnly: true
      volumes:
      - name: parry-mount
        persistentVolumeClaim:
          claimName: parry-pvc
      - name: parry-timezone-host
        hostPath:
          path: /etc/timezone
          type: File
      - name: parry-localtime-host
        hostPath:
          path: /etc/localtime
          type: File
