home/Deployments/parry/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: parry-svc
  namespace: parry-system
  labels:
    app: parry-svc
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: parry-app
