home/Deployments/parry/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parry-ingress
  namespace: parry-system
spec:
  ingressClassName: nginx-external
  rules:
  - host: parry.technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parry-svc
            port:
              number: 80
